--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3338,6 +3338,7 @@ width: 169px !important;
 
 #recent-menu-model-list .recent-view-comany-style.img-inital{
   height: 25px !important;
+  margin-left: 5px;
 }
 .recent-view-line-height
 {
@@ -3346,4 +3347,16 @@ width: 169px !important;
 
 .recent-view-background-color img[src="//doxhze3l6s7v9.cloudfront.net/beta/static/img/com-default-img.png"]{
   border-radius: 0% !important;
+}
+
+.recent-view-background-color{
+   height: 35px;
+    width: 35px;
+    background-color: #f0f0f0 !important;
+    border-radius: 50%;
+    line-height: 33px;
+}
+
+.rectview-deal-icon{
+  margin-left :7px;
 }
