--- a/agile-frontend/WebContent/misc/pagebuilder/source/elements/css/style-content.css
+++ b/agile-frontend/WebContent/misc/pagebuilder/source/elements/css/style-content.css
@@ -44,5 +44,9 @@ body .nav-tabs > li.active > a, body .nav-tabs > li.active > a:hover, body .nav-
 .tabs .tab-pane {
 	padding: 30px 20px;
 }
-
+@media (max-width: 500px) and (min-width: 300px){
+            .margin-top{
+                margin-top:10px;
+            }
+}
 /* end tabs */
