Revert "Form Builder minifier update with  agile-min.css"
This reverts commit 1a853205f75e523c964d6ee76796aa884335dac8.

--- a/agile-frontend/WebContent/misc/formbuilder/assets/templates/app/renderform.html
+++ b/agile-frontend/WebContent/misc/formbuilder/assets/templates/app/renderform.html
@@ -1,4 +1,4 @@
-<link href="https://tejashree-dot-36-5-dot-agile-crm-cloud.appspot.com/misc/formbuilder/agile-form.css" rel="stylesheet">
+<link href="https://s3.amazonaws.com/agilecrm/forms/v1/agile-form-min.css" rel="stylesheet">
 <form class="form-view<%=agileformtransbg%> <%=agilethme%>" id="agile-form" action="<%= action %>"  style= "max-width:450px;" method="GET">
 <fieldset>
 
