--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3327,6 +3327,7 @@ width: 169px !important;
 }
 .agile-theme-15 #fullcontact_login_form .checkbox input[type="checkbox"]{
   margin-left: -17px !important;
+  margin-top:2px;
 }
 .agile-theme-15 #support_plan_alert_info{
   width: 390px !important;
