add recent view changes

--- a/agile-frontend/WebContent/flatfull/css/core/1-agilecrm.css
+++ b/agile-frontend/WebContent/flatfull/css/core/1-agilecrm.css
@@ -5303,3 +5303,8 @@ span.rolecontainer::first-letter {
     text-decoration: none;
     display: block;
 }
+.recent-view-background-color,
+.recent-view-background-color[icon="icon-money"]{
+  display: inherit !important;
+  padding: 0px !important; 
+}
