--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -1998,7 +1998,7 @@ ul.dashboard-search-scroll-bar li:hover, ul.dashboard-search-scroll-bar li:activ
   background-color: rgba(17, 160, 248, 0.1) !important;
 }
 .recent-view-background-color{
-  background-color: inherit;
+  background-color: inherit !important;
 }
 ul#recent-menu-model-list li:nth-child(even){
   background-color: inherit;
@@ -3327,7 +3327,6 @@ width: 169px !important;
 }
 .agile-theme-15 #fullcontact_login_form .checkbox input[type="checkbox"]{
   margin-left: -17px !important;
-  margin-top:2px;
 }
 .agile-theme-15 #support_plan_alert_info{
   width: 390px !important;
@@ -3355,13 +3354,23 @@ width: 169px !important;
   border-radius: 0% !important;
 }
 
-.recent-view-background-color{
+.recent-view-background-color[src="//doxhze3l6s7v9.cloudfront.net/beta/static/img/com-default-img.png"],
+.recent-view-background-color[icon="icon-money"]{
+   height: 35px !important;
+    width: 35px !important;
+    background-color: #f0f0f0 !important;
+    border-radius: 50%;
+    line-height: 33px;
+    display: inherit !important;
+}
+
+/*.recent-view-background-color{
    height: 35px;
     width: 35px;
     background-color: #f0f0f0 !important;
     border-radius: 50%;
     line-height: 33px;
-}
+}*/
 
 .rectview-deal-icon{
   margin-left :7px;
