Form_Description in Forms1

--- a/agile-frontend/WebContent/misc/formbuilder/assets/templates/snippet/formname.html
+++ b/agile-frontend/WebContent/misc/formbuilder/assets/templates/snippet/formname.html
@@ -1,5 +1,6 @@
 <!-- Form Name -->
 <legend><%= name %></legend>
+<p class="agile-form-description"><%= description %></p>
 <div style="display: none; height: 0px; width: 0px;">
 <input type="hidden" id="_agile_form_name" name="_agile_form_name" value="<%= name %>">
 <input type="hidden" id="_agile_domain" name="_agile_domain" value="<%= agiledomain %>">
