--- a/agile-frontend/WebContent/misc/formbuilder/builder-themes.css
+++ b/agile-frontend/WebContent/misc/formbuilder/builder-themes.css
@@ -67,7 +67,7 @@ border-radius: 20px;
 }
 
 .theme1 legend{
-border-bottom: 3px solid #f6f6f6!important;
+/*border-bottom: 3px solid #f6f6f6!important;*/
 text-align: center;
 font-size: 18px;
 font-weight: 600;
@@ -686,4 +686,23 @@ select:not([multiple]){
 }
 .field_req{
   color:red;
+}
+.theme1 .agile-form-description{
+  border-bottom: 3px solid #f6f6f6;
+  text-align: center;
+}
+.theme2 .agile-form-description{
+  text-align: center;
+  border-bottom: none;
+  background-color: #fbfbfb;
+  color: #333;
+}
+.theme3 .agile-form-description{
+  text-align: center;
+  border-bottom: none;
+}
+.theme4 .agile-form-description{
+  text-align: center;
+  background-color: #77c4d4;
+  color: #fff;
 }
