--- a/agile-frontend/WebContent/misc/formbuilder/agile-form.css
+++ b/agile-frontend/WebContent/misc/formbuilder/agile-form.css
@@ -577,10 +577,14 @@ margin-left: 35px;
 }*/
 .agile-form-transparent{
 background-color:transparent!important;
-color: #fff!important
+color: #fff!important;
 }
 .agile-form-transparent legend,.agile-form-transparent button{
-color: #fff!important
+color: #fff!important;
+}
+.agile-form-transparent .agile-form-description{
+background-color:transparent!important;
+color: #fff!important;
 }
 .agile-form-transparent .agile-group-addon,.agile-form-transparent input,.agile-form-transparent select,.agile-form-transparent textarea{
  background-color: rgba(255, 255, 255, 0.07)!important;
@@ -655,10 +659,14 @@ height:39px!important;
 /* new transparency with black text css start */
 .agile-form-blck-transparent{
 background-color:transparent!important;
-color: #333!important
+color: #333!important;
 }
 .agile-form-blck-transparent legend,.agile-form-blck-transparent button{
-color: #333!important
+color: #333!important;
+}
+.agile-form-blck-transparent .agile-form-description{
+color: #333!important;
+background-color:transparent!important;
 }
 .agile-form-blck-transparent .agile-group-addon,.agile-form-blck-transparent input,.agile-form-blck-transparent select,.agile-form-blck-transparent textarea{
  background-color: rgba(255, 255, 255, 0.07)!important;
