--- a/agile-frontend/WebContent/misc/formbuilder/formbuilder-transparency.css
+++ b/agile-frontend/WebContent/misc/formbuilder/formbuilder-transparency.css
@@ -4,6 +4,10 @@ background-color:transparent!important;
 .agile-form-transparent legend,.agile-form-transparent .agile-group button{
 color: #fff!important;
 }
+.agile-form-transparent .agile-form-description{
+background-color:transparent!important;
+color: #fff!important;
+}
 .agile-form-transparent .agile-group-addon,.agile-form-transparent input,.agile-form-transparent select,.agile-form-transparent textarea{
  background-color: rgba(255, 255, 255, 0.07)!important;
  border: 1px solid rgba(238, 238, 238, 0.27)!important;
@@ -77,6 +81,10 @@ background-color:transparent!important;
 }
 .agile-form-blck-transparent legend,.agile-form-blck-transparent .agile-group button{
 color: #333!important;
+}
+.agile-form-blck-transparent .agile-form-description{
+color: #333!important;
+background-color:transparent!important;
 }
 .agile-form-blck-transparent .agile-group-addon,.agile-form-blck-transparent input,.agile-form-blck-transparent select,.agile-form-blck-transparent textarea{
  background-color: rgba(255, 255, 255, 0.07)!important;
