--- a/agile-frontend/WebContent/misc/pagebuilder/source/elements/css/newtemplate.css
+++ b/agile-frontend/WebContent/misc/pagebuilder/source/elements/css/newtemplate.css
@@ -197,6 +197,7 @@ figure {
     float: left;
     font-size: 18px;
     margin: 20px 0 0 0;
+    text-align: left;
 }
 #newtemp6{
     background: #f6f6f6;
@@ -207,7 +208,7 @@ figure {
     margin: 10px 0 0 -10px;
 }
 .client_area{
-    margin: 25px 0 0;
+    margin: 25px 0 0 10px;
     float: left;
 }
 #newtemp7{
@@ -225,3 +226,38 @@ figure {
         margin: 10px 0 10px;
     }
 }
+.btn-large{
+    font-size: 22px;
+    min-width: 200px;
+    display: inline-block;
+    padding: 14px 10px 16px;
+    text-align: center;
+    color:white;
+}
+.margin-left-15{
+    margin-left: 15px;
+}
+@media (max-width: 500px) and (min-width: 300px){
+    .margin-left-15{
+        margin-left:  0px;
+    }
+}
+@media (max-width: 375px) and (min-width: 300px){
+    .play-store img{
+        margin-top: 10px;
+    }    
+}
+@media (max-width: 425px) and (min-width: 300px){
+    .play-store {
+        margin-left: 0px;
+    } 
+}
+.videobtn-resp {
+    margin-top: -25px;
+}
+@media (max-width: 500px) and (min-width: 300px){
+    .videobtn-resp {
+        margin-top: 0px;
+    }
+}
+
