fixed issues withe the icon

--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/dynamic-colors.less
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/dynamic-colors.less
@@ -42,7 +42,7 @@
       color: #555 !important;
       background-color: #fff !important;
     }
-    .grid-icon-header, .grid-v2 .dropdown-toggle{
+    .grid-icon-header{
       color : @theme-color;
     }
     .agile-sub-header h1, .agile-sub-header h2, .agile-sub-header h3, .tickets-toolbar .filter-name-btn{
