new templates changed bottom

--- a/agile-frontend/WebContent/misc/emailbuilder/templates/layout11/body_index.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/templates/layout11/body_index.html
@@ -807,8 +807,7 @@
 <tbody>
 <tr>
 <td class="block-text" data-clonable="true" align="left" style="padding:10px 50px 10px 50px;">
-<div style="margin: 0px 0px 10px; font-family: Arial, &quot;Helvetica Neue&quot;, Helvetica, sans-serif; font-size: 12px; line-height: 16px; outline: none;" class="textFix"><div style="text-align: center;"><span style="font-family: arial, helvetica, sans-serif; font-size: 10px;">1234 Main Street, Anywhere, MA 01234, USA</span></div>
-<div style="text-align: center;"><a href="{{{unsubscribe_link}}}">Unsubscribe</a>&nbsp;| <a href="{{{online_link}}}">View this email in your browser</a></div></div>
+<div style="margin: 0px 0px 10px; font-family: Arial, &quot;Helvetica Neue&quot;, Helvetica, sans-serif; font-size: 12px; line-height: 16px; outline: none;" class="textFix"><div style="text-align: center;">1234 Main Street, Anywhere, MA 01234, USA<br>Copyright &copy; 2016 <a href="#">agilecrm.com</a> all rights reserved.<br><a href="{{{unsubscribe_link}}}">unsubscribe</a> | <a href="#">agilecrm.com</a> | care@agilecrm.com | +1 800 9800 729</div></div>
 </td>
 </tr>
 </tbody>
