--- a/agile-frontend/WebContent/misc/emailbuilder/templates/layout14/body_index.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/templates/layout14/body_index.html
@@ -12,11 +12,11 @@
 </div>
 <div class="view">
 <div class="row clearfix">
-<table width="640" class="main" cellspacing="0" cellpadding="0" border="0" align="center" style="background-color: rgb(238, 238, 238); display: table;" data-type="image" id="8b8740e0-f3c2-6df1-0a0b-c6afe6fa340f" data-color="true">
+<table width="640" class="main" cellspacing="0" cellpadding="0" border="0" align="center" style="background-color: rgb(255, 255, 255); display: table;" data-type="image" id="8b8740e0-f3c2-6df1-0a0b-c6afe6fa340f" data-color="true">
 <tbody>
 <tr>
 <td align="center" style="padding: 0px 50px;" class="image">
-<a target="_blank" class="imgLink" href="http://"><img class="" border="0" data-maxwidth="520" align="one_image" style="display: block; max-width: 110px;" alt="" src="https://agilecrm.s3.amazonaws.com/et/static/your-logo3.png" tabindex="0" width="110" height="110" id="3fc39461-3993-b987-255d-c939c239c499"></a>
+<a target="_blank" class="imgLink" href="http://"><img class="" border="0" data-maxwidth="520" align="one_image" style="display: block; max-width: 100px;" alt="" src="https://agilecrm.s3.amazonaws.com/et/static/your-logo3.png" tabindex="0" width="100" height="100" id="3fc39461-3993-b987-255d-c939c239c499"></a>
 </td>
 </tr>
 </tbody>
@@ -33,7 +33,7 @@
 </div>
 <div class="view">
 <div class="row clearfix">
-<table width="640" class="main" cellspacing="0" cellpadding="0" border="0" align="center" style="background-color: rgb(238, 238, 238); display: table;" data-type="image" id="2e35471f-edb2-1969-ee8a-fabf0a937771" data-color="true">
+<table width="640" class="main" cellspacing="0" cellpadding="0" border="0" align="center" style="background-color: rgb(255, 255, 255); display: table;" data-type="image" id="2e35471f-edb2-1969-ee8a-fabf0a937771" data-color="true">
 <tbody>
 <tr>
 <td align="center" style="padding:15px 50px 15px 50px;" class="image">
@@ -54,7 +54,7 @@
 </div>
 <div class="view">
 <div class="row clearfix">
-<table width="640" class="main" cellspacing="0" cellpadding="0" border="0" style="background-color: rgb(238, 238, 238); display: table;" align="center" data-type="text-block" id="5102f4c7-76f0-b623-e874-78ce85fe3675" data-color="true">
+<table width="640" class="main" cellspacing="0" cellpadding="0" border="0" style="background-color: rgb(255, 255, 255); display: table;" align="center" data-type="text-block" id="5102f4c7-76f0-b623-e874-78ce85fe3675" data-color="true">
 <tbody>
 <tr>
 <td class="block-text" data-clonable="true" align="left" style="padding:10px 50px 10px 50px;">
@@ -77,7 +77,7 @@
 </div>
 <div class="view">
 <div class="row clearfix">
-<table class="main" width="640" style="border: 0px; background-color: rgb(238, 238, 238); display: table;" cellspacing="0" cellpadding="0" border="0" align="center" data-type="line" id="f26299fb-0604-ff91-f4b6-22d04d86869d" data-color="true">
+<table class="main" width="640" style="border: 0px; background-color: rgb(255, 255, 255); display: table;" cellspacing="0" cellpadding="0" border="0" align="center" data-type="line" id="f26299fb-0604-ff91-f4b6-22d04d86869d" data-color="true">
 <tbody><tr>
 <td class="divider-simple" style="padding: 15px 50px 0px 50px;">
 <table width="100%" cellspacing="0" cellpadding="0" border="0" style="border-top: 1px solid #DADFE1;">
@@ -100,7 +100,7 @@
 </div>
 <div class="view">
 <div class="row clearfix">
-<table class="main" width="640" cellspacing="0" cellpadding="0" border="0" bgcolor="#FFFFFF" align="center" style="background-color: rgb(238, 238, 238); display: table;" data-type="imgtxt" id="56bd2135-1121-24c5-f612-ef225d558ee1" data-color="true">
+<table class="main" width="640" cellspacing="0" cellpadding="0" border="0" bgcolor="#FFFFFF" align="center" style="background-color: rgb(255, 255, 255); display: table;" data-type="imgtxt" id="56bd2135-1121-24c5-f612-ef225d558ee1" data-color="true">
 <tbody>
 <tr>
 <td class="image-text" align="left" style="padding: 10px 50px;">
@@ -138,7 +138,7 @@
 </div>
 <div class="view">
 <div class="row clearfix">
-<table class="main" width="640" style="border: 0px; background-color: rgb(238, 238, 238); display: table;" cellspacing="0" cellpadding="0" border="0" align="center" data-type="line" id="c210e7e1-5e89-9e59-37da-f416850858cb" data-color="true">
+<table class="main" width="640" style="border: 0px; background-color: rgb(255, 255, 255); display: table;" cellspacing="0" cellpadding="0" border="0" align="center" data-type="line" id="c210e7e1-5e89-9e59-37da-f416850858cb" data-color="true">
 <tbody><tr>
 <td class="divider-simple" style="padding: 15px 50px 0px 50px;">
 <table width="100%" cellspacing="0" cellpadding="0" border="0" style="border-top: 1px solid #DADFE1;">
@@ -161,7 +161,7 @@
 </div>
 <div class="view">
 <div class="row clearfix">
-<table class="main" width="640" cellspacing="0" cellpadding="0" border="0" bgcolor="#FFFFFF" align="center" style="background-color: rgb(238, 238, 238); display: table;" data-type="imgtxt" id="02457973-27a5-4bb1-5c35-70481f98dfc9" data-color="true">
+<table class="main" width="640" cellspacing="0" cellpadding="0" border="0" bgcolor="#FFFFFF" align="center" style="background-color: rgb(255, 255, 255); display: table;" data-type="imgtxt" id="02457973-27a5-4bb1-5c35-70481f98dfc9" data-color="true">
 <tbody>
 <tr>
 <td class="image-text" align="left" style="padding: 10px 50px 20px;">
@@ -197,7 +197,7 @@
 </div>
 <div class="view">
 <div class="row clearfix">
-<table class="main" align="center" width="640" cellspacing="0" cellpadding="0" border="0" style="background-color: rgb(238, 238, 238); display: table;" data-type="social-links" id="a75921e7-8947-a2c7-8e87-7e65f86f8964" data-color="true">
+<table class="main" align="center" width="640" cellspacing="0" cellpadding="0" border="0" style="background-color: rgb(255, 255, 255); display: table;" data-type="social-links" id="a75921e7-8947-a2c7-8e87-7e65f86f8964" data-color="true">
 <tbody>
 <tr>
 <td class="social" align="center" style="padding: 20px 50px 10px;">
@@ -235,11 +235,13 @@
 </div>
 <div class="view">
 <div class="row clearfix">
-<table width="640" class="main" cellspacing="0" cellpadding="0" border="0" style="background-color: rgb(238, 238, 238); display: table;" align="center" data-type="text-block" id="95198825-cfba-cd07-b3e8-58e455a0abd4" data-color="true">
+<table width="640" class="main" cellspacing="0" cellpadding="0" border="0" style="background-color: rgb(255, 255, 255); display: table;" align="center" data-type="text-block" id="95198825-cfba-cd07-b3e8-58e455a0abd4" data-color="true">
 <tbody>
 <tr>
 <td class="block-text" data-clonable="true" align="left" style="padding:10px 50px 10px 50px;">
-<div style="margin: 0px 0px 10px; font-family: Arial, &quot;Helvetica Neue&quot;, Helvetica, sans-serif; font-size: 12px; line-height: 21px; outline: none;" class="textFix"><div style="text-align: center;"><span style="font-size: 12px; font-family: helvetica, arial, sans-serif; color: #93918b;">You are receiving this email because you opted in on our website or when your purchased our products. No longer care to receive our emails? <span style="color: #3366ff;"><a style="color: #3366ff;" href="{{{unsubscribe_link}}}" target="_blank">Unsubscribe</a></span></span></div></div>
+<div style="margin: 0px 0px 10px; font-family: Arial, &quot;Helvetica Neue&quot;, Helvetica, sans-serif; font-size: 12px; line-height: 21px; outline: none;" class="textFix"><div style="text-align: center;">1234 Main Street, Anywhere, MA 01234, USA</div>
+<div style="text-align: center;">Copyright &copy; 2016 <a href="#">agilecrm.com</a> all rights reserved.</div>
+<div style="text-align: center;"><a href="{{{unsubscribe_link}}}">unsubscribe</a> | <a href="#">agilecrm.com</a> | care@agilecrm.com | +1 800 9800 729</div></div>
 </td>
 </tr>
 </tbody>
