--- a/agile-frontend/WebContent/misc/emailbuilder/templates/layout15/body_index.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/templates/layout15/body_index.html
@@ -402,12 +402,7 @@
 <tbody>
 <tr>
 <td class="block-text" data-clonable="true" align="left" style="padding: 20px 50px;">
-<div style="margin: 0px 0px 10px; font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif; font-size: 16px; line-height: 21px; outline: none;" class="textFix"><div style="text-align: center;"><span style="color: #605f5d; font-size: 12px; font-family: helvetica, arial, sans-serif;"><a style="color: #605f5d;" href="https://www.agilecrm.com" target="_blank">Agile CRM</a> &nbsp; &nbsp;| &nbsp; &nbsp; <a style="color: #605f5d;" href="https://www.agilecrm.com/resources" target="_blank">How it works</a> &nbsp; &nbsp; &nbsp;| &nbsp; &nbsp; <a style="color: #605f5d;" href="https://www.agilecrm.com/resources" target="_blank">FAQs</a> &nbsp; &nbsp; &nbsp;| &nbsp; &nbsp; &nbsp;<a style="color: #605f5d;" href="https://www.agilecrm.com/terms" target="_blank">T&amp;Cs</a> </span></div>
-<div style="text-align: center;"><span style="color: #605f5d; font-size: 12px; font-family: helvetica, arial, sans-serif;">&nbsp;</span></div>
-<div style="text-align: center;"><span style="color: #605f5d; font-size: 12px; font-family: helvetica, arial, sans-serif;">You have received this email as a registered user of Agilecrm.com </span></div>
-<div style="text-align: center;"><span style="color: #605f5d; font-size: 12px; font-family: helvetica, arial, sans-serif;">You can unsubscribe from these emails here (Don't worry, we won't take it personally). </span></div>
-<div style="text-align: center;"><span style="color: #605f5d; font-size: 12px; font-family: helvetica, arial, sans-serif;">Agile CRM&nbsp;Inc. | 2415 Dallas-Fort Worth, TX. | Dallas-Fort Worth, TX 90409 | United States. Company Number: +1-800-980-0729</span></div>
-<div style="text-align: center;"><span style="color: #605f5d; font-size: 12px; font-family: helvetica, arial, sans-serif;">&copy; Agile CRM, Inc.</span></div></div>
+<div style="margin: 0px 0px 10px;font-family: &quot;Helvetica Neue&quot;, Helvetica, Arial, sans-serif;font-size: 12px;line-height: 16px;outline: none;" class="textFix"><div style="text-align: center;"><span>1234 Main Street, Anywhere, MA 01234, USA</span><br><span>Copyright &copy; 2016 <a href="#">agilecrm.com</a> all rights reserved.</span><br><span><a href="{{{unsubscribe_link}}}">unsubscribe</a> | <a href="#">agilecrm.com</a> | care@agilecrm.com | +1 800 9800 729</span></div></div>
 </td>
 </tr>
 </tbody>
