--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3423,7 +3423,7 @@ width: 169px !important;
   padding: 6px 12px !important;
   margin-top:3px !important;
 }
-.agile-theme-15 .add-me-to-cc{
+.agile-theme-15 .add-me-to-cc,.remove-date{
   font-size: 10px;
   margin-top: 2px;
 }
