changing ticket modal
Conflicts:
	agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
	agile-frontend/WebContent/flatfull/tpl/tickets/ticket-new-template.html

--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3481,6 +3481,7 @@ i.mce-ico, i.mce-caret, span.mce-txt{
   padding: 6px 12px !important;
   margin-top:3px !important;
 }
+
 .agile-theme-15 .add-me-to-cc,.remove-date,.assign-to-me{
   font-size: 10px;
   margin-top: 2px;
@@ -3539,6 +3540,7 @@ i.mce-ico, i.mce-caret, span.mce-txt{
   color: #78909c!important;
   border-radius: 3px;
  }
+
 
 #ticket-contact-details .label.dk.ccemail {
     margin-top: 5px;
@@ -3621,3 +3623,34 @@ color: #78909c!important;
   color: #11a0f8 !important;
 }
 
+
+ .choose-due-date:hover{
+     color: #11a0f8 !important;
+ }
+
+ /*#new-ticket .cc-emails-st .tag{
+    margin: 0px !important;
+     line-height: 16px; 
+    font-size: 13px!important;
+    height: auto;
+    vertical-align: middle;
+    padding: 0px !important;
+ }*/
+ #new-ticket .cc-emails-st{
+  padding: 0px;
+  margin-top: -3px;
+ }
+
+  #new-ticket .cc-emails-st .tag:hover{
+    background-color: #f4f8f9!important;
+    color: #f4f8f9!important;
+ }
+ h4#plan_name {
+  margin: 0px !important;
+ }
+ #new-ticket #cc_email_field{
+  height: 37px !important;
+ }
+ #new-ticket .cc-emails li.tag-li{
+  display: block !important;
+ }
