changing ticket modal
Conflicts:
	agile-frontend/WebContent/flatfull/css/core/1-agilecrm.css
	agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
	agile-frontend/WebContent/flatfull/tpl/tickets/ticket-new-template.html

--- a/agile-frontend/WebContent/flatfull/css/core/1-agilecrm.css
+++ b/agile-frontend/WebContent/flatfull/css/core/1-agilecrm.css
@@ -5388,6 +5388,7 @@ span.rolecontainer::first-letter {
 {
   word-break: keep-all;
 }
+
 #free-downgrade-restrictions{
   z-index: 1;
   background-color: #fff;
@@ -5396,4 +5397,8 @@ span.rolecontainer::first-letter {
   left: 0;
   width: 100%;
   min-height: 150px;
+}
+
+#new-ticket i.icon-plus-sign{
+  margin-top: 7px;
 }
