--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3676,8 +3676,13 @@ color: #78909c!important;
  }
 
  .modal-header.ticket-modal-header{
-  border-bottom: 0px solid whtie;
+  border-bottom: 0px solid white;
  }
  .ticket-modal-heading{
   padding: 23px 0px 0px 0px;
+ }
+
+ .modal-footer.ticket-modal-footer{
+  border-top: 0px solid white;
+  padding:30px 0px 20px 0px;
  }
