tinymce editor same as balkan done

--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3297,7 +3297,7 @@ width: 169px !important;
   border-top-right-radius: 5px;
 }
 .agile-theme-15 .mce-toolbar-grp{
-  padding: 9px 8px 12px 8px !important;
+  padding: 15px 8px 12px 10px !important;
 }
 .agile-theme-15 .mce-toolbar-grp{
   background-color: #f4f8f9 !important;
@@ -3308,9 +3308,9 @@ width: 169px !important;
 .agile-theme-15 .mce-container.mce-toolbar.mce-stack-layout-item.mce-first{
   margin-bottom: 8px;
 }
-.agile-theme-15 .mce-tinymce.mce-container.mce-panel{
+/*.agile-theme-15 .mce-tinymce.mce-container.mce-panel{
   box-shadow: 0 10px 30px 0px rgba(0, 0, 0, 0.07) !important;
-}
+}*/
 i.mce-ico, i.mce-caret, span.mce-txt{
   opacity: 0.4 !important;
 }
@@ -3333,6 +3333,14 @@ i.mce-ico, i.mce-caret, span.mce-txt{
   background-color: rgb(227, 236, 239) !important;
   border-color: rgb(227, 236, 239) !important;
 }
+.agile-theme-15 .mce-tinymce iframe{
+  background-color: #f4f8f9 !important;
+  border-radius: 5px !important;
+}
+.agile-theme-15 .mce-edit-area label{
+  color: rgba(136, 136, 136, 0.39) !important;
+  left: 10px !important;
+} 
 
   /*Tinymce Editor New Theme CSS End*/
 
