--- a/agile-frontend/WebContent/misc/formbuilder/assets/templates/snippet/styledbutton.html
+++ b/agile-frontend/WebContent/misc/formbuilder/assets/templates/snippet/styledbutton.html
@@ -3,7 +3,7 @@
 <div class="agile-group">
   <label class="agile-label">&nbsp;<%= label %></label>
   <div class="agile-field">
-    <button type="submit" class="agile-button agile-stylebutton" style="background-color: #23b7e5;border-color: #23b7e5;border-radius: 20px;height: 44px;padding: 0px 25px;color: white;border-style: solid;"><%= buttonlabel %></button>
+    <button type="submit" class="agile-button agile-stylebutton"><%= buttonlabel %></button>
     <br><span id="agile-error-msg"></span>
   </div>
 </div>
