--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3676,16 +3676,16 @@ color: #78909c!important;
  }
 
  .modal-header.ticket-modal-header{
-  border-bottom: 0px solid white;
+  border-bottom: 0px solid rgba(255, 255, 255, 0.025);
  }
  .ticket-modal-heading{
   padding: 15px 0px 0px 23px;
  }
 
  .modal-footer.ticket-modal-footer{
-  border-top: 0px solid white;
+  border-top: 0px solid rgba(255, 255, 255, 0.025);
   padding:15px 40px 40px 0px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.025);
  }
  #new-ticket .control-group.form-group{
       padding: 0px 30px 0px 30px !important;
@@ -3697,4 +3697,15 @@ color: #78909c!important;
 
 .modal-content .modal-header .ticket-modal-heading h3{
   font-size: 20px !important;
+}
+
+.ticket-modal-cancel{
+  padding: 0px 35px 0px 0px;
+}
+#create-ticket{
+  padding: 0em 3em;
+  line-height: 31px !important;
+}
+.ticket-modal-content{
+  border-radius: 5px;
 }
