--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3704,7 +3704,7 @@ color: #78909c!important;
 }
 #create-ticket{
   padding: 0em 3em;
-  line-height: 31px !important;
+  font-size: 13px !important;
 }
 .ticket-modal-content{
   border-radius: 5px;
