ticket modal as same in other themes

--- a/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
+++ b/agile-frontend/WebContent/flatfull/css/material-theme/css/agile-theme.css
@@ -3709,3 +3709,9 @@ color: #78909c!important;
 .ticket-modal-content{
   border-radius: 5px;
 }
+
+.btn-mlg-imp{
+  height: 30px !important;
+  line-height: 30px !important;
+  font-size: 13px !important;
+}
